# aws-glue-dev

./: .env  .env_sample  .gitignore  README.md  lint_test_sample.py  main.py  pyproject.toml  sample.py  tests.py
.devcontainer/: Dockerfile  devcontainer.json
document/: 環境構築手順.md  開発手順.md
modules/: etl.py  session.py
tests/: conftest.py  test_etl.py  test_session.py
